--- a/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
+++ b/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
@@ -35,6 +35,7 @@ compiler:
       disabled: false   # default false
       port: 8003  # default 7687
   query_timeout: 200 # query timeout in milliseconds, default 2000
+  query_max_iterations: 5
   calcite_default_charset: UTF-8
 http_service:
   default_listen_address: localhost
