fix bugs caused by updated schema

--- a/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
+++ b/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
@@ -20,6 +20,9 @@ compiler:
       - FilterMatchRule
       - ExtendIntersectRule
       - ExpandGetVFusionRule
+    cbo:
+      glogue:
+        size: 2
   meta:
     reader:
       schema:
