fixing graphscope_flex packing
Committed-by: xiaolei.zl from Dev container

--- a/python/.openapi-generator-ignore
+++ b/python/.openapi-generator-ignore
@@ -22,7 +22,25 @@
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
 
+docs/
+test/
 
-graphscope/flex/models/date_type.py
-graphscope/flex/models//time_stamp_type.py
+.github/
+.gitignore
+.gitlab-ci.yml
+.travis.yml
+git_push.sh
+pyproject.toml
+requirements.txt
+setup.cfg
+setup.py
+test-requirements.txt
+tox.ini
+python.yml
+.openapi-generator/
+README.md
 
+graphscope/__init__.py
+graphscope/flex/__init__.py
+graphscope/flex/rest/models/date_type.py
+graphscope/flex/rest/models/time_stamp_type.py
