--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ core.*
 
 # Openapi generated code
 python/graphscope/flex/rest
+python/.openapi-generator/
 !python/graphscope/flex/rest/models/time_stamp_type.py
 !python/graphscope/flex/rest/models/date_type.py
 
