refactor(interactive): Add Error Codes in `CompilePlan` JNI Results (#4472)
<!--
Thanks for your contribution! please review
https://github.com/alibaba/GraphScope/blob/main/CONTRIBUTING.md before
opening an issue.
-->

## What do these changes do?
as titled.

<!-- Please give a short brief about these changes. -->

## Related issue number

<!-- Are there any issues opened that will be resolved by merging this
change? -->

Fixes

--- a/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
+++ b/interactive_engine/compiler/src/test/resources/config/gs_interactive_hiactor.yaml
@@ -20,6 +20,9 @@ compiler:
       - FilterMatchRule
       - ExtendIntersectRule
       - ExpandGetVFusionRule
+    cbo:
+      glogue:
+        size: 2
   meta:
     reader:
       schema:
@@ -35,6 +38,7 @@ compiler:
       disabled: false   # default false
       port: 8003  # default 7687
   query_timeout: 200 # query timeout in milliseconds, default 2000
+  query_max_iterations: 5
   calcite_default_charset: UTF-8
 http_service:
   default_listen_address: localhost
