--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,8 @@ flex/interactive/sdk/python/gs_interactive/exceptions.py
 flex/interactive/sdk/python/gs_interactive/rest.py
 !flex/interactive/sdk/python/gs_interactive/client/generated/__init__.py
 !flex/interactive/sdk/python/gs_interactive/models/long_text.py
+!flex/interactive/sdk/python/gs_interactive/models/time_stamp_type.py
+!flex/interactive/sdk/python/gs_interactive/models/date_type.py
 
 
 **/.cache/
