--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -41,3 +41,5 @@ http_service:
   default_listen_address: localhost
   admin_port: 7777
   query_port: 10000
+coordinator:
+  max_content_length: 1048576 # 1MB
