--- a/flex/interactive/sdk/python/.openapi-generator-ignore
+++ b/flex/interactive/sdk/python/.openapi-generator-ignore
@@ -27,6 +27,8 @@ README.md
 setup.py
 gs_interactive/client
 gs_interactive/models/long_text.py
+gs_interactive/models/date_type.py
+gs_interactive/models/time_stamp_type.py
 requirements.txt
 test-requirements.txt
 test/
