exclude kerby dependency from gremlin test

--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -428,6 +428,12 @@
         <groupId>org.apache.tinkerpop</groupId>
         <artifactId>gremlin-test</artifactId>
         <version>${tinkerpop.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.kerby</groupId>
+            <artifactId>kerb-simplekdc</artifactId>
+          </exclusion>
+        </exclusions>
         <scope>compile</scope>
       </dependency>
       <dependency>
