--- a/.github/workflows/flex-interactive.yml
+++ b/.github/workflows/flex-interactive.yml
@@ -67,7 +67,7 @@ jobs:
         COORDINATOR_PORT: 8080
         COORDINATOR_ENDPOINT: "http://127.0.0.1:8080"
       run: |
-        docker image inspect graphscope/interactive:latest --format='{{.Size}}
+        docker image inspect graphscope/interactive:latest --format='{{.Size}}'
         # launch service: ${COORDINATOR_PORT} for coordinator http port; ${CYPHER_PORT} for cypher port;
         gsctl instance deploy --type interactive --image-registry graphscope --image-tag latest --cypher-port ${CYPHER_PORT} \
               --coordinator-port ${COORDINATOR_PORT} --config ${GITHUB_WORKSPACE}/flex/tests/hqps/interactive_config_test.yaml
