--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ docs/flex/interactive/development/java/*
 docs/flex/interactive/development/python/*
 !docs/flex/interactive/development/python/*Api.md
 !docs/flex/interactive/development/python/python_sdk.md
+!docs/flex/interactive/development/python/python_sdk_ref.md
 docs/flex/interactive/development/restful_api.html
 docs/flex/coordinator/development/python/*
 
