feat(interactive): Introduce max_content_size for admin_service (#4491)
As titled.

--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -41,5 +41,4 @@ http_service:
   default_listen_address: localhost
   admin_port: 7777
   query_port: 10000
-coordinator:
-  max_content_length: 1048576 # 1MB
+  max_content_length: 1GB
