let document use the latest version of interactive
Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

Committed-by: xiaolei.zl from Dev container

try best to avoid cut off

Committed-by: xiaolei.zl from Dev container

Revert "try best to avoid cut off"

This reverts commit 991666eafb52df308cd4153257fe3c46beb1f8ba.

Committed-by: xiaolei.zl from Dev container

fix

Committed-by: xiaolei.zl from Dev container

Committed-by: xiaolei.zl from Dev container

format

Committed-by: xiaolei.zl from Dev container

Committed-by: xiaolei.zl from Dev container

--- a/.github/workflows/flex-interactive.yml
+++ b/.github/workflows/flex-interactive.yml
@@ -70,7 +70,8 @@ jobs:
         docker image inspect graphscope/interactive:latest --format='{{.Size}}'
         # launch service: ${COORDINATOR_PORT} for coordinator http port; ${CYPHER_PORT} for cypher port;
         gsctl instance deploy --type interactive --image-registry graphscope --image-tag latest --cypher-port ${CYPHER_PORT} \
-              --coordinator-port ${COORDINATOR_PORT} --config ${GITHUB_WORKSPACE}/flex/tests/hqps/interactive_config_test.yaml
+              --coordinator-port ${COORDINATOR_PORT} --config ${GITHUB_WORKSPACE}/flex/tests/hqps/interactive_config_test.yaml \
+              --set storage.string_default_max_length=1024
         sleep 20
         # test
         python3 -m pip install --no-cache-dir pytest pytest-cov pytest-timeout pytest-xdist
