--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -158,6 +158,61 @@ jobs:
         sudo docker tag graphscope/interactive:${SHORT_SHA} ${{ env.INTERACTIVE_IMAGE }}:${{ steps.tag.outputs.TAG }}-arm64
         sudo docker push ${{ env.INTERACTIVE_IMAGE }}:${{ steps.tag.outputs.TAG }}-arm64
 
+  push-interactive-image-manifest:
+    if: (github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope') || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope')
+    runs-on: ubuntu-22.04
+
+    needs: [build-interactive-image-amd64, build-interactive-image-arm64]
+
+    - name: Add envs to GITHUB_ENV
+      run: |
+        short_sha=$(git rev-parse --short HEAD)
+        echo "SHORT_SHA=${short_sha}" >> $GITHUB_ENV
+
+    - name: Create and Push Docker Manifest
+      env:
+        docker_password: ${{ secrets.DOCKER_PASSWORD }}
+        docker_username: ${{ secrets.DOCKER_USER }}
+      run: |
+        echo "${docker_password}" | sudo docker login --username="${docker_username}" ${{ env.DOCKER_URL }} --password-stdin
+
+        # create
+        sudo docker manifest create \
+          ${{ env.INTERACTIVE_IMAGE }}:${SHORT_SHA} \
+          ${{ env.INTERACTIVE_IMAGE }}:${SHORT_SHA}-amd64 \
+          ${{ env.INTERACTIVE_IMAGE }}:${SHORT_SHA}-arm64
+
+        # push
+        sudo docker manifest push ${{ env.INTERACTIVE_IMAGE }}:${SHORT_SHA}
+
+        # Remove old latest manifest
+        sudo docker manifest rm ${{ env.INTERACTIVE_IMAGE }}:latest
+        sudo docker manifest create \
+          ${{ env.INTERACTIVE_IMAGE }}:latest \
+          ${{ env.INTERACTIVE_IMAGE }}:latest-amd64 \
+          ${{ env.INTERACTIVE_IMAGE }}:latest-arm64
+
+        sudo docker manifest push ${{ env.INTERACTIVE_IMAGE }}:latest
+
+    - name: Extract Tag Name
+      if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope' }}
+      id: tag
+      run: echo "TAG=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+    - name: Release Image
+      if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope' }}
+      env:
+        docker_password: ${{ secrets.DOCKER_PASSWORD }}
+        docker_username: ${{ secrets.DOCKER_USER }}
+      run: |
+        echo "${docker_password}" | sudo docker login --username="${docker_username}" ${{ env.DOCKER_URL }} --password-stdin
+        sudo docker manifest create \
+          ${{ env.INTERACTIVE_IMAGE }}:${{ steps.tag.outputs.TAG }} \
+          ${{ env.INTERACTIVE_IMAGE }}:${{ steps.tag.outputs.TAG }}-amd64 \
+          ${{ env.INTERACTIVE_IMAGE }}:${{ steps.tag.outputs.TAG }}-arm64
+
+        sudo docker manifest push ${{ env.INTERACTIVE_IMAGE }}:${{ steps.tag.outputs.TAG }}
+
   build-gss-image-amd64:
     if: (github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope') || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope')
     runs-on: ubuntu-20.04
