--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -164,6 +164,7 @@ jobs:
 
     needs: [build-interactive-image-amd64, build-interactive-image-arm64]
 
+    steps:
     - name: Add envs to GITHUB_ENV
       run: |
         short_sha=$(git rev-parse --short HEAD)
