--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -159,7 +159,8 @@ jobs:
         sudo docker push ${{ env.INTERACTIVE_IMAGE }}:${{ steps.tag.outputs.TAG }}-arm64
 
   push-interactive-image-manifest:
-    if: (github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope') || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope')
+    # if: (github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope') || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope')
+    if: true
     runs-on: ubuntu-22.04
 
     needs: [build-interactive-image-amd64, build-interactive-image-arm64]
