--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -163,7 +163,7 @@ jobs:
     if: true
     runs-on: ubuntu-22.04
 
-    needs: [build-interactive-image-amd64, build-interactive-image-arm64]
+    # needs: [build-interactive-image-amd64, build-interactive-image-arm64]
 
     steps:
     - uses: actions/checkout@v4
