--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,8 @@ on:
     # Trigger the workflow at 03:00(CST) every day.
     - cron: '00 19 * * *'
   push:
-    # tags:
-      # - 'v*'
+    tags:
+      - 'v*'
 
 env:
   DOCKER_URL: registry.cn-hongkong.aliyuncs.com
@@ -159,11 +159,10 @@ jobs:
         sudo docker push ${{ env.INTERACTIVE_IMAGE }}:${{ steps.tag.outputs.TAG }}-arm64
 
   push-interactive-image-manifest:
-    # if: (github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope') || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope')
-    if: true
+    if: (github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope') || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope')
     runs-on: ubuntu-22.04
 
-    # needs: [build-interactive-image-amd64, build-interactive-image-arm64]
+    needs: [build-interactive-image-amd64, build-interactive-image-arm64]
 
     steps:
     - uses: actions/checkout@v4
