only keep one option: wal_uri
Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

--- a/flex/tests/hqps/interactive_config_test.yaml
+++ b/flex/tests/hqps/interactive_config_test.yaml
@@ -10,12 +10,7 @@ compute_engine:
     type: cpp-mcsr
   metadata_store:
     type: file # file/sqlite/etcd
-  wal_writer_type: local # should we use two configuration, wal_writer_type, wal_parser_type?
-  wal_parser_type: local
-  # wal_parsing_uri: ""
-  # wal_writing_uri: ""
-  # When wal_parser_type is local, <wal_parsing_uri> and <wal_writing_uri> doesn't take effect, 
-  # when wal_parser_type is customized, this should be set to some uri, and will be passed to parser.open()
+  wal_uri: file://{GRAPH_DATA_DIR}/wal # Could be file://{GRAPH_DATA_DIR}/wal or other supported storage class. GRAPH_DATA_DIR is the placeholder for the graph data directory.
 compiler:
   planner:
     is_on: true
