--- a/charts/graphscope-store/templates/configmap.yaml
+++ b/charts/graphscope-store/templates/configmap.yaml
@@ -36,6 +36,7 @@ data:
 
     ## Frontend Config
     frontend.service.port={{ .Values.frontend.service.servicePort }}
+    frontend.service.httpPort={{ .Values.frontend.service.httpPort }}
     frontend.server.id=INDEX
     frontend.server.num={{ .Values.frontend.replicaCount }}
 
@@ -171,6 +172,10 @@ data:
     # export MALLOC_CONF=prof:true,lg_prof_interval:29,lg_prof_sample:19,prof_prefix=/tmp
 
     export RUST_BACKTRACE=1
+    if [ "$ROLE" = "frontend" ]; then
+      echo "Starting groot-http Spring Boot service..."
+      ${GRAPHSCOPE_HOME}/groot/bin/store_ctl.sh start_http &
+    fi
     ${GRAPHSCOPE_HOME}/groot/bin/store_ctl.sh start ${ROLE}  # || sleep infinity
   portal_setup.sh: |-
     #!/bin/bash
