--- a/interactive_engine/assembly/src/conf/groot/config.template
+++ b/interactive_engine/assembly/src/conf/groot/config.template
@@ -25,13 +25,14 @@ kafka.topic=groot
 
 ## Frontend Config
 gremlin.server.port=12312
+frontend.service.httpPort=8080
 
 log4rs.config=LOG4RS_CONFIG
 
 neo4j.bolt.server.disabled=true
 
 pegasus.worker.num=2
-pegasus.hosts=localhost:8080
+pegasus.hosts=localhost:1234
 
 kafka.test.cluster.enable=true
 collect.statistics=false
